# eemi-projet-git

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT  FEATURE_REQUEST  config.yml
.github/workflows/: ci.yml
validataurus/tests/: test_credit_card_validator.py  test_date_validator.py  test_email_validator.py  test_password_validator.py  test_phone_validator.py
validataurus/validators/: credit_card_validator.py  date_validator.py  email_validator.py  password_validator.py  phone_validator.py  validator.py
